Fix missing colors for light mode
Who uses light mode anyway

--- a/website/style.css
+++ b/website/style.css
@@ -1,6 +1,8 @@
 :root {
     --background: #eeeeee;
     --text: #41474e;
+    --accent: #d26878;
+    --link: #5690af;
 }
 
 @media (prefers-color-scheme: dark) {
